# suparch

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-catalog.yml  release-image.yml
docs/: affiliate-onboarding.md  architecture.md  data-sources.md
src/suparch/: __init__.py  affiliate.py  barcodes.py  catalog.py  cli.py  crawler.py  dsld.py  enrichment.py  kroger.py  models.py  normalization.py  parser.py  repositories.py  runtime.py  server.py  services.py
src/suparch/data/: sample_catalog.json
tests/: test_affiliate.py  test_barcodes.py  test_comparison.py  test_crawler.py  test_dsld.py  test_enrichment.py  test_kroger.py  test_models.py  test_normalization.py  test_parser.py  test_product_summary.py  test_quality_gates.py  test_registry_metadata.py  test_runtime.py  test_server.py  test_services.py  test_sqlite_repository.py
tests/fixtures/: dsld_label.json  iherb_affiliate_feed.csv  iherb_product.html
