[project]
name = "suparch"
version = "0.1.0"
description = "Search supplements by what's inside."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Suparch contributors" },
]
dependencies = [
  "beautifulsoup4>=4.13,<5",
  "httpx>=0.28,<1",
  "lxml>=5.4,<7",
  "mcp[cli]>=1.27,<2",
  "pydantic>=2.11,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
suparch = "suparch.server:main"
suparch-catalog = "suparch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/suparch"]

[tool.hatch.build]
include = [
  "src/suparch/**/*.py",
  "src/suparch/data/*.json",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
